<resources>

    <!-- Toolbar-->
    <string name="app_name">Relatório de Célula</string>
    <string name="activity_name"></string>
    <string name="main_title">Relatótio de Célula</string>
    <string name="add_report_title">Adicionar Relatório</string>

    <!-- Add Report forms labels-->
    <string name="nome_da_celula">Nome da célula</string>
    <string name="nome_do_lider">Nome do líder</string>
    <string name="nome_do_co_lider">Nome do Colider</string>
    <string name="nome_do_anfitriao">Nome do anfitrião</string>
    <string name="membros">N° de Membros</string>
    <string name="quantidade_de_visitantes">N° de Visitantes</string>
    <string name="oferta">Oferta</string>
    <string name="data_da_reuinao">Data da reuinão</string>
    <string name="estudo_da_celula">Versículo Bíblico</string>
    <string name="commits">Comentários Adicionais</string>

    <!-- Details report Labels-->
    <string name="label_celula">CÉLULA : </string>
    <string name="label_lider">LÍDER : </string>
    <string name="label_colider">ViCE-LIDER : </string>
    <string name="label_anfitriao">ANFITRIÃO : </string>
    <string name="label_membros">Nº DE MEMBROS : </string>
    <string name="label_visitantes">Nº DE VISITANTES : </string>
    <string name="label_oferta">OFERTA R$: </string>
    <string name="label_data">DATA : </string>
    <string name="label_estudo">TEXTO BÍBLICO : </string>
    <string name="label_commits">OBSERVAÇÕES:</string>
    <string name="comentarios_estudo">Observações que deseje acrescentar sobre a Célua. Ou Se fez alguma visita na semana.</string>

    <string name="salvar">Salvar</string>

    <string name="text_title">Relatórios de Célula</string>
    <string name="visao_celular">Visão Celular</string>
    <string name="reports_search">Pesquisar relatórios</string>
    <string name="add_reports">Acicionar Relatórios</string>
    <string name="month">Month</string>
    <string name="report_saved">Seu Relatório foi Salvo</string>

    <!-- reportEntity error message -->
    <string name="message_empty_edit">Preenchimento obrigatório</string>
    <string name="report_error_save">Há campos vazios ou incorretos</string>
    <string name="str_celula_report">Relatório de Célula</string>

    <string name="money_default">0,00</string>
    <string name="floatting_button_desc">Open add report screen</string>
    <string name="sharing_title">Compartilhar Relarório</string>
    <string name="report_page_title">Relatório de Célula</string>
    <string name="explaining_why_feature_is_unavalible">O compartilhamento de relatório não poderá ser usado. Sem a permissão de criação e acesso ao arquivo de relatório.</string>
    <string name="study_for_permission_requested">Para compartilhar o relatório o aplicativo precisará criar um arquivo PDF e lê-lo do aparelho.</string>
    <string name="report_not_found">\"Relório não existe no banco de dados \"</string>
    <string name="pdf_generated">Um Arquivo de PDF foi gerado para o compartilhamento. </string>
    <string name="img_repor_descr">report icon</string>
    <string name="helper_data_meeting">aperte o ícone para escolher a data *</string>
    <string name="helper_required">obrigatório*</string>
    <string name="helper_member">quantidade de membros*</string>
    <string name="helper_guest">quantidade de visitantes na célula*</string>
    <string name="helper_oferta">Oferta arrecadada na célula*</string>
    <string name="favorite_icon">Relatório Enviado?</string>
    <string name="share_icon">Compartilhar</string>
    <string name="edit_icon">editar relatório</string>
    <string name="delete_icon">excluir relatório</string>
    <string name="delete_button_dialog">Excluir</string>
    <string name="cancel_button_dialog">cancelar</string>
    <string name="cancel_dialog_msg">ação cancelada</string>
    <string name="deleted_dialog_message">Relatório excuido com sucesso</string>
    <string name="delete_dialog_title">Excluir Relatório</string>
    <string name="delete_dialog_desc">Confime se você deseja excluir este relatório</string>

</resources>
