<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/min_margin"
        android:background="@drawable/report_page_border">

    <ImageView
        android:id="@+id/img_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_report"
        android:layout_marginStart="@dimen/big_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/report_title"
        app:layout_constraintTop_toTopOf="@id/report_title"
        app:layout_constraintBottom_toBottomOf="@id/report_title"
        android:contentDescription="@string/img_repor_descr" />

    <TextView
        android:id="@+id/report_title"
        style="@style/report_page_title"
        android:text="@string/report_page_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/img_report"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/label_celula"
        style="@style/report_page_labels"
        android:text="@string/label_celula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_title" />

    <TextView
        android:id="@+id/txt_celula"
        style="@style/text_page_resp"
        app:layout_constraintBottom_toBottomOf="@id/label_celula"
        app:layout_constraintStart_toEndOf="@id/label_celula"
        app:layout_constraintTop_toTopOf="@id/label_celula"
        />

    <EditText
        android:id="@+id/label_lider"
        style="@style/report_page_labels"
        android:text="@string/label_lider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_celula" />

    <TextView
        android:id="@+id/txt_lider"
        style="@style/text_page_resp"
        app:layout_constraintBottom_toBottomOf="@id/label_lider"
        app:layout_constraintStart_toEndOf="@id/label_lider"
        app:layout_constraintTop_toTopOf="@id/label_lider"
        />

    <EditText
        android:id="@+id/label_colider"
        style="@style/report_page_labels"
        android:text="@string/label_colider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_lider" />

    <TextView
        android:id="@+id/txt_colider"
        style="@style/text_page_resp"
        app:layout_constraintBottom_toBottomOf="@id/label_colider"
        app:layout_constraintStart_toEndOf="@id/label_colider"
        app:layout_constraintTop_toTopOf="@id/label_colider" />

    <EditText
        android:id="@+id/label_anfitriao"
        style="@style/report_page_labels"
        android:text="@string/label_anfitriao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_colider" />

    <TextView
        android:id="@+id/txt_anfitriao"
        style="@style/text_page_resp"
        app:layout_constraintBottom_toBottomOf="@id/label_anfitriao"
        app:layout_constraintStart_toEndOf="@id/label_anfitriao"
        app:layout_constraintTop_toTopOf="@id/label_anfitriao" />

    <EditText
        android:id="@+id/label_membros"
        style="@style/report_page_labels"
        android:text="@string/label_membros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_anfitriao" />

    <TextView
        android:id="@+id/txt_membros"
        style="@style/text_page_resp"
        app:layout_constraintBottom_toBottomOf="@id/label_membros"
        app:layout_constraintStart_toEndOf="@id/label_membros"
        app:layout_constraintTop_toTopOf="@id/label_membros" />

    <EditText
        android:id="@+id/label_visitantes"
        style="@style/report_page_labels"
        android:text="@string/label_visitantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_membros" />

    <TextView
        android:id="@+id/txt_visitantes"
        style="@style/text_page_resp"
        app:layout_constraintBottom_toBottomOf="@id/label_visitantes"
        app:layout_constraintStart_toEndOf="@id/label_visitantes"
        app:layout_constraintTop_toTopOf="@id/label_visitantes" />

    <EditText
        android:id="@+id/label_data"
        style="@style/report_page_labels"
        android:text="@string/label_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_visitantes" />

    <TextView
        android:id="@+id/txt_data"
        style="@style/text_page_resp"
        app:layout_constraintBottom_toBottomOf="@id/label_data"
        app:layout_constraintStart_toEndOf="@id/label_data"
        app:layout_constraintTop_toTopOf="@id/label_data" />

    <EditText
        android:id="@+id/label_estudo"
        style="@style/report_page_labels"
        android:text="@string/label_estudo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_data" />

    <TextView
        android:id="@+id/txt_estudo"
        style="@style/text_page_resp"
        app:layout_constraintBottom_toBottomOf="@id/label_estudo"
        app:layout_constraintStart_toEndOf="@id/label_estudo"
        app:layout_constraintTop_toTopOf="@id/label_estudo" />

    <EditText
        android:id="@+id/label_oferta"
        style="@style/report_page_labels"
        android:text="@string/label_oferta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_estudo"/>

    <TextView
        android:id="@+id/txt_oferta"
        style="@style/text_page_resp"
        app:layout_constraintBottom_toBottomOf="@id/label_oferta"
        app:layout_constraintStart_toEndOf="@id/label_oferta"
        app:layout_constraintTop_toTopOf="@id/label_oferta" />

    <EditText
        android:id="@+id/label_commits"
        style="@style/report_page_labels"
        android:layout_marginStart="@dimen/max_margin"
        android:layout_marginTop="@dimen/max_margin"
        android:text="@string/label_commits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_oferta"/>

    <TextView
        android:id="@+id/txt_commits"
        style="@style/text_commit_page_resp"
        android:inputType="none"
        android:ems="15"
        android:hint="@string/commits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_commits" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>