<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AddReportFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_details"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/report_pg_tollbar_id"
            app:titleTextAppearance="@style/Toolbar.TitleText.Collapsed_main"
            app:titleTextColor="@color/text_app"
            app:title="@string/add_report_title"
            app:logo="@drawable/ic_report"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/add_report_menu">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/layoutBackground">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nome_celula"
                style="@style/textInputLayoutOutlineStyle"
                app:endIconMode="clear_text"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:errorIconTintMode="src_over"
                app:helperText="@string/helper_required"
                app:helperTextEnabled="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nome_celula_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:overScrollMode="always"
                    android:isScrollContainer="true"
                    android:hint="@string/nome_da_celula"
                    android:textSize="20sp"
                    android:padding="@dimen/med_padding"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nome_lider"
                style="@style/textInputLayoutOutlineStyle"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:errorIconTintMode="src_over"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:helperTextEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_nome_celula">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nome_lider_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_do_lider"
                    android:textSize="20sp"
                    android:padding="@dimen/med_padding" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nome_colider"
                style="@style/textInputLayoutOutlineStyle"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:errorIconTintMode="src_over"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:helperTextEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/layout_nome_lider"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nome_colider_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_do_co_lider"
                    android:textSize="20sp"
                    android:padding="@dimen/med_padding" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nome_anfitriao"
                style="@style/textInputLayoutOutlineStyle"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:errorIconTintMode="src_over"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:helperTextEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/layout_nome_colider"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nome_anfitriao_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_do_anfitriao"
                    android:textSize="20sp"
                    android:padding="@dimen/med_padding" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_data_reuniao"
                style="@style/textInputLayoutOutlineStyle"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconDrawable="@drawable/ic_date_range_black_24dp"
                app:endIconMode="custom"
                app:endIconTint="@color/colorPrimary"
                app:errorEnabled="true"
                app:errorIconTintMode="src_over"
                app:helperText="@string/helper_data_meeting"
                app:helperTextEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/layout_nome_anfitriao"
                app:layout_constraintStart_toStartOf="parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_reuniao_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/data_da_reuinao"
                    android:inputType="date"
                    android:textSize="20sp"
                    android:padding="@dimen/med_padding"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_n_membros"
                style="@style/textInputLayoutOutlineStyle"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:errorIconTintMode="src_over"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_member"
                app:helperTextEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/layout_data_reuniao"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/n_membros_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/membros"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:padding="@dimen/med_padding" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_n_visitantes"
                style="@style/textInputLayoutOutlineStyle"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:errorIconTintMode="src_over"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_guest"
                app:helperTextEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/layout_n_membros"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/n_visitantes_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantidade_de_visitantes"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:padding="@dimen/med_padding" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_oferta"
                style="@style/textInputLayoutOutlineStyle"
                app:counterEnabled="true"
                app:startIconDrawable="@drawable/ic_brazil_real_symbol"
                app:startIconTintMode="src_atop"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorIconTintMode="src_over"
                app:helperText="@string/helper_oferta"
                app:helperTextEnabled="true"
                app:startIconTint="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/layout_n_visitantes"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oferta_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/oferta"
                    android:inputType="number|numberDecimal"
                    android:padding="@dimen/med_padding"
                    android:textSize="20sp"
                    android:text="@string/money_default" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_estudo"
                style="@style/textInputLayoutOutlineStyle"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:errorIconTintMode="src_over"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_required"
                app:helperTextEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/layout_oferta"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/estudo_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/estudo_da_celula"
                    android:textSize="20sp"
                    android:padding="@dimen/med_padding" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_commits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:text="@string/commits"
                android:textSize="@dimen/min_report"
                app:layout_constraintTop_toBottomOf="@id/layout_estudo"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_commits"
                style="@style/textInputLayoutOutlineStyle"
                app:counterEnabled="true"
                app:startIconTintMode="src_atop"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:helperText="@string/comentarios_estudo"
                app:layout_constraintTop_toBottomOf="@id/tv_commits"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commits_edit"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="start|top"
                    android:textSize="@dimen/min_report"
                    android:padding="@dimen/med_padding"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>